# agentic-ai-cloud

./: LICENSE  README.md
microservice_helloworld/fastapi_helloworld2/: README.md  pyproject.toml
microservice_helloworld/fastapi_helloworld2/fastapi_helloworld2/: main.py
microservice_helloworld/fastapi_helloworld2/tests/: test_main.py
poetry/project1/: README.md  pyproject.toml
poetry/project1/tests/: test_myproject.py
